5. Fixed z-index of sidebar

--- a/front-end/src/Container/Sidebar/Sidebar.module.css
+++ b/front-end/src/Container/Sidebar/Sidebar.module.css
@@ -7,6 +7,7 @@
     left: -100%;
     transition: left 1s;
     border-right: 1px solid gray;
+    z-index: 1;
 }
 
 .sidebar-header {
